Examples/Declarative/Syntax.lean
/- # syntax

[`ğŸ·ï¸ãƒ¡ã‚¿ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°`](./?search=ğŸ·ãƒ¡ã‚¿ãƒ—ãƒ­ã‚°ãƒ©ãƒŸãƒ³ã‚°)

`syntax` ã‚³ãƒãƒ³ãƒ‰ã¯æ–°ã—ã„æ§‹æ–‡ã‚’å®šç¾©ã™ã‚‹ã“ã¨ãŒã§ãã¾ã™ã€‚
-/
import Lean
namespace Syntax --#

open Lean Parser

/-- parse ã§ãã‚‹ã‹ã©ã†ã‹ãƒã‚§ãƒƒã‚¯ã™ã‚‹é–¢æ•° -/
def checkParse (cat : Name) (s : String) : MetaM Unit := do
  if let .error s := runParserCategory (â† getEnv) cat s then
    throwError s

-- æœ€åˆã¯ `#greet` ãªã©ã¨ã„ã†ã‚³ãƒãƒ³ãƒ‰ã¯å®šç¾©ã•ã‚Œã¦ã„ãªã„ã®ã§
-- ãã‚‚ãã‚‚ Lean ã®åˆæ³•ãªæ§‹æ–‡ã¨ã—ã¦èªã‚ã‚‰ã‚Œãªã„ã€‚
/-- error: <input>:1:0: expected command -/
#guard_msgs (error) in
  #eval checkParse `command "#greet"

-- `#greet` ã¨ã„ã†ã‚³ãƒãƒ³ãƒ‰ã®ãŸã‚ã®æ§‹æ–‡ã‚’å®šç¾©
syntax "#greet" : command

-- `#greet` ã¨ã„ã†ã‚³ãƒãƒ³ãƒ‰ãŒ Lean ã«èªè­˜ã•ã‚Œã‚‹ã‚ˆã†ã«ãªã£ãŸã€‚
-- ã‚¨ãƒ©ãƒ¼ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã¯ã€`#greet` ã‚³ãƒãƒ³ãƒ‰ã®è§£é‡ˆæ–¹æ³•ãŒãªã„ã¨è¨€ã£ã¦ã„ã‚‹ã€‚
/-- error: elaboration function for 'Syntax.Â«command#greetÂ»' has not been implemented -/
#guard_msgs in #greet

/- Lean ã«æ§‹æ–‡ã‚’èªè­˜ã•ã›ã‚‹ã ã‘ã§ãªãã€è§£é‡ˆã•ã›ã‚‹ã«ã¯ [`macro_rules`](./MacroRules.md) ãªã©ã®åˆ¥ã®ã‚³ãƒãƒ³ãƒ‰ãŒå¿…è¦ã§ã™ã€‚-/

-- `#greet` ã‚³ãƒãƒ³ãƒ‰ã®è§£é‡ˆæ–¹æ³•ã‚’å®šã‚ã‚‹
macro_rules
  | `(command| #greet) => `(#eval "Hello, Lean!")

/- ## ãƒ‘ãƒ¼ã‚¹å„ªå…ˆåº¦
`syntax` ã‚³ãƒãƒ³ãƒ‰ã¯ Lean ã«æ–°ã—ã„æ§‹æ–‡è§£æãƒ«ãƒ¼ãƒ«ã‚’è¿½åŠ ã™ã‚‹ã®ã§ã€æ—¢å­˜ã®æ§‹æ–‡ã¨è¡çªã—ã¦æ„å›³é€šã‚Šã«è§£é‡ˆã•ã‚Œãªã„ã“ã¨ãŒã‚ã‚Šã¾ã™ã€‚
-/
section

/-- `a = b as T` ã¨ã„ã†æ§‹æ–‡ã‚’å®šç¾© -/
local syntax term " = " term " as " term : term

/-- `a = b as T` ã¨ã„ã†æ§‹æ–‡ã‚’ã€å‹ `T` ä¸Šã§ `a = b` ãŒæˆã‚Šç«‹ã¤ã¨è§£é‡ˆã•ã›ã‚‹ -/
local macro_rules
  | `(term| $a = $b as $c) => `(@Eq (Î± := $c) $a $b)

-- `Nat` ã¨ `Prop` ã‚’è¶³ã™ã“ã¨ã¯ã§ããªã„ã¨ã„ã†ã‚¨ãƒ©ãƒ¼ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã€‚
-- `1 + (1 = 2)` ã ã¨èªè­˜ã•ã‚Œã¦ã—ã¾ã£ã¦ã„ã‚‹ã‚ˆã†ã ã€‚
/--
warning: failed to synthesize
  HAdd Nat Prop ?m.1897
Additional diagnostic information may be available using the `set_option diagnostics true` command.
-/
#guard_msgs (warning) in
  #check_failure (1 + 1 = 2 as Nat)

end
/- ãƒ‘ãƒ¼ã‚¹å„ªå…ˆåº¦(parsing precedence)ã‚’è¨­å®šã™ã‚‹ã“ã¨ã§ã€ã©ã®æ§‹æ–‡ã‹ã‚‰é †ã«è§£é‡ˆã•ã‚Œã‚‹ã‹ã‚’æŒ‡å®šã™ã‚‹ã“ã¨ãŒã§ãã€å•é¡Œã‚’ä¿®æ­£ã§ãã‚‹ã“ã¨ãŒã‚ã‚Šã¾ã™ã€‚ã“ã®ã‚ãŸã‚Šã¯ [`notation`](./Notation.md) ã‚³ãƒãƒ³ãƒ‰ã¨åŒæ§˜ã§ã™ã€‚ -/
section

-- ååˆ†ä½ã„ãƒ‘ãƒ¼ã‚¹å„ªå…ˆåº¦ã‚’è¨­å®šã™ã‚‹
local syntax:10 term:10 " = " term:10 " as " term:10 : term

local macro_rules
  | `(term| $a = $b as $c) => `(@Eq (Î± := $c) $a $b)

-- æ„å›³é€šã‚Šã«æ§‹æ–‡è§£æãŒé€šã‚‹ã‚ˆã†ã«ãªã‚‹
#guard (1 + 1 = 2 as Nat)

#guard (3 - 5 + 4 = 2 as Int)

#guard (2 * 3 / 2 = 3 as Rat)

end
end Syntax --#
